fix: display caption on iphone

--- a/src/blocks/modules/projects/projects.scss
+++ b/src/blocks/modules/projects/projects.scss
@@ -12,6 +12,9 @@
   }
 
   &__item {
+    width: 100%;
+    height: 100%;
+    display: flex;
     text-decoration: none;
     position: relative;
 
@@ -41,9 +44,8 @@
   &__caption {
     position: absolute;
     left: 0;
+    right: 0;
     bottom: 0;
-    width: 100%;
-    height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
